TEST_PROGRAMS/VALID/07/type_intarray.go
package main
type IntArray [16] int
