TEST_PROGRAMS/INVALID/04/45.go
package main

func main() {
    //Illegal struct type
    var x { foo []int; }
}
